# retailGPT

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml
chat_interface/: Dockerfile  pyproject.toml
chat_interface/src/: app.py  chatbot.py
chat_interface/src/utils/: data_utils.py
retailGPT/: Dockerfile.actions  Dockerfile.rasa
retailGPT/actions_server/: pyproject.toml
retailGPT/actions_server/src/: actions.py
retailGPT/actions_server/src/LLMChatbot/: chatbot.py  prompts.py  schemas.py
retailGPT/actions_server/src/LLMChatbot/services/: cart_handler.py  database.py  llm_handler.py  memory_handler.py  product_handler.py
retailGPT/actions_server/src/LLMChatbot/services/guardrails/: guardrails.py  words_to_be_filtered.py
retailGPT/datasets/: happy_single_messages.json  malicious_single_messages.json  mocked_products.json  purchase_history.json
retailGPT/datasets/evaluation/: action_testing.json  consistency_testing.json  evaluator.py
retailGPT/rasa_chatbot/: config.yml  domain.yml  pyproject.toml
retailGPT/rasa_chatbot/data/: nlu.yml  stories.yml
retailGPT/rasa_chatbot/data/rules/: LLM.yml  forms.yml  rules.yml
